--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="assets/images/svg/logo-first.svg">
+    <link rel="icon" type="image/svg" href="assets/images/svg/logo-first.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -108,7 +108,10 @@
 
         <section class="about-sec min-h-screen flex flex-col md:flex-row justify-center items-center md:items-start w-screen gap-12 md:gap-24 px-4 sm:px-16 md:px-32 mt-12">
             
-            <img src="./assets/images/Profile-r1.jpg" class="w-4/5 md:w-1/3" alt="Me">
+            <div class="my-img relative w-[500px]">
+                <img src="./assets/images/Profile-r1.jpg" class="w-fit h-full rounded-lg" alt="Me">
+                <img src="./assets/images/svg/Its_me.svg" alt="Its me" class="absolute top-0 w-1/4">
+            </div>
 
             <div class="about-detail w-11/12 md:w-full">
                 <h1 class="hidden md:block flex-1 text-3xl sm:text-5xl md:text-7xl mb-4">About Me</h1>
