--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     
     <link rel="apple-touch-icon" sizes="any" href="./assets/favicon/logo-first.svg">
-    <link rel="icon" type="image/svg+xml" sizes="any" href="assets/favicon/logo-first.svg">
+    <link rel="icon" type="image/svg+xml" sizes="any" href="./assets/favicon/logo-first.svg">
     <link rel="manifest" href="./assets/favicon/site.webmanifest">
 
 
@@ -196,7 +196,7 @@
         </div>
 
 
-        <div class="section">
+        <!-- <div class="section">
             <div id="string" class="bg-red-500">
                 <svg width="1000" height="200">
                     <path d="M 10 100 Q 500 100 990 100" stroke="white" fill="transparent"></path>
@@ -246,7 +246,7 @@
         </div>
         <div class="lastContainer">
             Last Container
-        </div>
+        </div> -->
 
     </main>
 
