--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           }
         }
     </script>
-    <link rel="stylesheet" href="css/utils.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/utils.css">
     <title>Ritesh Pachangane</title>
 </head>
 <body class="">
@@ -97,7 +97,7 @@
     </header>
     
     <!-- <div id="cursor" class="hidden md:block cursor-none"></div> -->
-    <div class="cursor"></div>
+    <div class="hidden md:block cursor"></div>
 
     <main class="main-sec relative">
         
