--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
             <div class="hero-content w-full md:w-1/2  p-12 md:p-0 mt-12 md:mt-6 lg:mt-0">
                 <!-- <h5 class="hero-subtitle text-xl md:text-3xl" id="hero-subtitle">Hello World!</h5> -->
 
-                <h1 class="hero-title text-5xl sm:text-7xl md:text-8xl mt-4 relative londrina w-fit -rotate-1 cursor-scale cursor-none">
-                    <svg width="50" height="25" viewBox="0 0 50.23 25.22" fill="var(--color-primary)" class="char absolute -left-10 -top-2 -rotate-45">
+                <h1 class="hero-title text-5xl sm:text-7xl md:text-8xl mt-4 relative londrina w-fit cursor-scale cursor-none">
+                    <svg width="50" height="25" viewBox="0 0 50.23 25.22" fill="var(--color-primary)" class="upper-svg absolute -left-10 -top-2 -rotate-45">
                         <path d="M25.27,15.74a2.35,2.35,0,0,1-.91-.68c-.2-.27-.53-1.79-.71-2.1-.86-1.52-1.56-5.59-2.17-8.7C21.2,2.73,20.71,1,21.09.8A10.13,10.13,0,0,1,22.36.15c1.17-.43,4.3.14,4.57.52l.12.62.41.72.33,1.06L29,9.53l0,.76.22,1.17c.1,1.74,0,3.67-.26,3.73l-.63.09-.41,0Z"></path>
                         <path d="M13.31,23.62l-.27.32-1.8,1.26c-.21.2-1.89-.89-3.32-2l-.87-.88-.67-.43L1.57,17,.86,16l-.39-.77L0,14.79c-.17-.45,1.56-3,2.58-3.77.31-.22.89.58,1.45.31.39-.2,1.59,1.25,2.73,2.41,2.31,2.37,4.68,4.67,5.5,6.3.16.33,1.27,1.52,1.39,1.85a2.32,2.32,0,0,1,.06,1.17Z"></path>
                         <path d="M40.59,18a2.3,2.3,0,0,1-.38-1.1c0-.36.57-1.87.6-2.25C41,12.82,42.3,9.8,43.56,6.72c.63-1.5,1.2-3.29,1.64-3.26.62,0,.77-1.41,1.14-1.33,1.21.29,3.87,2.54,3.89,3L50,5.77l-.07.86-.32,1.11L47,14.11l-.46.65L46,15.91c-.9,1.59-2,3.24-2.33,3.13l-2.13-.49-.37-.19Z"></path>
@@ -339,16 +339,16 @@
 				<div class="photos">
 					<div class="photos-box">
 						<div class="photo red">
-							<img class="object-cover" src="./assets/images/projects/Pryzmity-work.png" />
+							<img class="object-cover" src="./assets/images/projects/Pryzmity-work.webp" />
 						</div>
 						<!-- <div class="photo green">
 							<img src="https://deveb.co/static/media/newdopegood.6e57b4b4.jpg" />
 						</div> -->
 						<div class="photo blue">
-							<img src="./assets/images/projects/Sumi-work.png" />
+							<img src="./assets/images/projects/Sumi-work.webp" />
 						</div>
 						<div class="photo orange">
-							<img src="./assets/images/projects/Accumen-work.png" />
+							<img src="./assets/images/projects/Accumen-work.webp" />
 						</div>
 					</div>
 				</div>
