--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </h3>
 
                 <div class="explore flex mt-12 justify-start items-center gap-4">
-                    <h5 class="text-2xl explore-text">Explore</h5>
+                    <h5 class="text-2xl explore-text londrina">Explore</h5>
                     <div class="explore-symbol flex justify-center items-center text-center bg-[#03AED2] p-2 px-4 rounded-[50px] text-2xl cursor-pointer hover:scale-[2]">
                         <h1 class="mb-1">&rarr;</h1>
                     </div>
